<resources>

    <!-- Modificar -->
    <array name="inquilinos">
        <item>Nombre: Layca Fernandez Telefono: 2664755056 Email: fernan@gmail.com</item>
        <item>Nombre: Claudia Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Ariel Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Benji Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Tito Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Mora Fernandez Telefono: 2664755056 Email:fernan@gmai.com</item>
        <item>Nombre: Yuyin Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
        <item>Nombre: Roque Fernandez Telefono: 2664755056 Email:fernan@gmail.com</item>
    </array>
    <string-array name="propiedades">
        <item><nombre>Departamento 1 </nombre></item>
        <item><nombre>Departamento 2 </nombre></item>
        <item><nombre>Departamento 3 </nombre></item>
        <item><nombre>Departamento 4 </nombre></item>
        <item><nombre>Departamento 5 </nombre></item>
        <item><nombre>Departamento 6 </nombre></item>
    </string-array>
    <!-- Modificar -->
    <string name="app_name">InmoCanito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- String framentos -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_propiedades">Propiedades</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_cotratos">Contratos</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <!-- String framentos -->
    <string name="home_second">Home Second</string>

    <!-- Spinner Uso-Propiedades -->
    <string-array name="spinner_uso">
        <item>Cotidiano</item>
        <item>Comercial</item>
        <item>Marciano</item>
    </string-array>
    <!-- Spinner Uso-Propiedades -->

    <!-- String activity-login -->
    <string name="title">Inicio de sesion</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_register">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La Contraseña debe tener mas de 5 caracteres</string>
    <string name="invalid_nombre">El Nombre debe tener mas de 30 caracteres</string>
    <string name="login_failed">"Error al iniciar sesion"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--- String activity-login -->

</resources>
