<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/inicio">

    <fragment
        android:id="@+id/inicio"
        android:name="com.example.inmocanito.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmocanito.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_propiedades"
        android:name="com.example.inmocanito.ui.propiedades.PropiedadesFragment"
        android:label="@string/menu_propiedades"
        tools:layout="@layout/fragment_propiedades" />
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmocanito.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />
    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.example.inmocanito.ui.pagos.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_propiedades" >
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmocanito.ui.contratos.ContratosFragment"
        android:label="@string/menu_cotratos"
        tools:layout="@layout/fragment_propiedades" />
    <fragment
        android:id="@+id/cerrarsesionFragment"
        android:name="com.example.inmocanito.ui.cerrarsesion.CerrarsesionFragment"
        android:label="@string/menu_cerrarsesion"
        tools:layout="@layout/fragment_cerrarsesion" />

</navigation>